JumpScript/tests/baselines/reference/continueTarget1.errors.txt
tests/cases/compiler/continueTarget1.jump(2,3): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.


==== tests/cases/compiler/continueTarget1.jump (1 errors) ====
    target:
      continue target;
      ~~~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.